--- a/static/css/song-table.css
+++ b/static/css/song-table.css
@@ -23,6 +23,7 @@
 
 .song-table img {
     height: 40px;
+    width: 40px;
     border-radius: 3px;
     box-shadow: 0px 0px 18px 0px rgba(0,0,0,0.3);
 }
